; ModuleID = '/home/carl/AnghaBench/lab/engine/code/sys/extr_con_tty.c_Hist_Prev.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/sys/extr_con_tty.c_Hist_Prev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hist_count = common dso_local global i32 0, align 4
@CON_HISTORY = common dso_local global i32 0, align 4
@hist_current = common dso_local global i32 0, align 4
@ttyEditLines = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @Hist_Prev() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = load i32, i32* @hist_count, align 4
  %4 = load i32, i32* @CON_HISTORY, align 4
  %5 = icmp sle i32 %3, %4
  %6 = zext i1 %5 to i32
  %7 = call i32 @assert(i32 %6)
  %8 = load i32, i32* @hist_count, align 4
  %9 = icmp sge i32 %8, 0
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  %12 = load i32, i32* @hist_current, align 4
  %13 = icmp sge i32 %12, -1
  %14 = zext i1 %13 to i32
  %15 = call i32 @assert(i32 %14)
  %16 = load i32, i32* @hist_current, align 4
  %17 = load i32, i32* @hist_count, align 4
  %18 = icmp sle i32 %16, %17
  %19 = zext i1 %18 to i32
  %20 = call i32 @assert(i32 %19)
  %21 = load i32, i32* @hist_current, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* %2, align 4
  %23 = load i32, i32* %2, align 4
  %24 = load i32, i32* @hist_count, align 4
  %25 = icmp sge i32 %23, %24
  br i1 %25, label %26, label %27

26:                                               ; preds = %0
  store i32* null, i32** %1, align 8
  br label %34

27:                                               ; preds = %0
  %28 = load i32, i32* @hist_current, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* @hist_current, align 4
  %30 = load i32*, i32** @ttyEditLines, align 8
  %31 = load i32, i32* @hist_current, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds i32, i32* %30, i64 %32
  store i32* %33, i32** %1, align 8
  br label %34

34:                                               ; preds = %27, %26
  %35 = load i32*, i32** %1, align 8
  ret i32* %35
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
